--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 =========================
 ==== start to git hup====
 =========================
-
+0: git clone https://github.com/medohasan124/medo.git
+	// to make copy from file to my pc
 1: add;
 
 	git add * // add all files
