--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 ==== start to git hup====
 =========================
 0: git clone https://github.com/medohasan124/medo.git
-	// to make copy from file  my pc
+	// to make copy from file b my pc
 1: add;
 
 	git add * // add all files
